--- a/CPSC471Project/src/components/RegisterComponent/registercomponent.css
+++ b/CPSC471Project/src/components/RegisterComponent/registercomponent.css
@@ -11,5 +11,16 @@
     border-radius: 10px;
     border-width: 2px;
     border-color: #EBE3D5;
-    width: 20vw;
+    width: 100%;
+}
+
+.register-submit {
+    background-color: #B0A695;
+    padding: 10px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.register-submit:hover {
+    background-color: #978d7d;
 }
