--- a/CPSC471Project/src/components/RegisterComponent/registercomponent.css
+++ b/CPSC471Project/src/components/RegisterComponent/registercomponent.css
@@ -14,6 +14,10 @@
     width: 100%;
 }
 
+.username-input:focus {
+    outline: none;
+}
+
 .register-submit {
     background-color: #B0A695;
     padding: 10px;
