--- a/CPSC471Project/src/components/Navbar/navbar.css
+++ b/CPSC471Project/src/components/Navbar/navbar.css
@@ -1,3 +1,17 @@
+.navbar {
+  position: fixed;
+  width: 100%; 
+  transition: top 0.3s;
+  top: 0;
+}
+
+.navbar-hidden {
+  top: -96px;
+}
+.navbar-spacer {
+    height: 96px;
+}
+
 .search-bar {
     outline: none;
     color: black;
