--- a/CPSC471Project/src/components/Navbar/navbar.css
+++ b/CPSC471Project/src/components/Navbar/navbar.css
@@ -3,25 +3,39 @@
   width: 100%; 
   transition: top 0.3s;
   top: 0;
+  height: 80px;
 }
 
 .navbar-hidden {
-  top: -96px;
+  top: -80px;
 }
 .navbar-spacer {
-    height: 96px;
+    height: 80px;
 }
 
 .search-bar {
     outline: none;
     color: black;
+    width: 60%;
+    height: 40px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    text-indent: 2%;
 }
 .search-button {
     background-color: rgb(208, 208, 208);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .search-button:hover {
     border-color: grey;
     background-color: rgb(193, 193, 193);
+}
+
+@media (max-width: 647px) {
+  .search-bar, .search-button {
+    display: none;
+  }
 }
 
 .background-of-navbar {
