Adding review, component, need to figure out how to display it

--- a/CPSC471Project/src/components/Navbar/navbar.css
+++ b/CPSC471Project/src/components/Navbar/navbar.css
@@ -77,6 +77,20 @@
     outline: none;
 }
 
+.review-button {
+  background-color: #7e2929;
+  border: none;
+}
+
+.review-button:hover {
+  background-color: #1479ec;
+}
+
+.review-button:focus {
+  background-color: #1479ec;;
+  outline: none;
+}
+
 .profile-button {
     padding: 10px;
     padding-left: 15px;
